--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,25 +7,20 @@
   list-style: none;
   text-decoration: none;
 }
+
 @font-face {
   font-family: "Poppins";
   src: url(Fonts/Poppins/Poppins-SemiBold.ttf) format(ttf);
 }
 body {
-  /* overflow: hidden; */
   font-family: "Poppins", sans-serif;
-  /* background-image: linear-gradient(black,white) ; */
 }
-
 .glossy-container {
-  /* position: relative; */
-  /* height: 100vh; */
   background: rgb(255, 255, 255);
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  /* border-bottom: 2px solid black; */
 }
 .glossy-container div.h1 {
   font-size: 2em;
@@ -33,7 +30,6 @@ body {
 }
 .glossy-container ul {
   line-height: 80px;
-  /* margin-right: 20px; */
   word-spacing: 20px;
 }
 .glossy-container ul li {
@@ -53,11 +49,16 @@ body {
   padding: 20px;
   text-align: center;
   margin-top: 140px;
+  min-height: 115vh;
 }
 .content h1 {
   text-align: center;
   font-size: 60px;
   text-transform: capitalize;
+  font-family: "Space Grotesk", sans-serif;
+  line-height: 1;
+  margin-bottom: 10px;
+  font-family: "Red Hat Display", sans-serif;
 }
 .content p {
   color: #19817c;
@@ -78,7 +79,6 @@ body {
   text-transform: capitalize;
   display: flex;
   flex-direction: column;
-  border: 2px solid #000000;
   color: white;
   width: 80%;
   margin: 0 auto;
@@ -88,84 +88,87 @@ body {
   transition: background-color 0.3s;
   overflow: hidden;
 }
-
 .row {
   display: flex;
+  flex-wrap: wrap;
 }
-
 .box {
-  flex: 1;
+  flex: 1 1 calc(33.333% - 20px);
   padding: 20px;
   text-align: center;
-  border-right: 2px solid #000000;
+  border: 1px solid #000000;
   cursor: pointer;
-  height: 60px;
+  height: auto;
+  box-sizing: border-box;
 }
-
 .box a {
   color: rgb(0, 0, 0);
 }
-
-.box:last-child {
-  border-right: none;
-}
-
-.box + .box {
-  border-left: none;
-}
-
-.row + .row {
-  border-top: 2px solid #000000;
-}
-
 .box:hover {
   background-color: rgb(255, 129, 154);
   color: white;
   transition: 0.75s;
 }
-
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 22px;
+  cursor: pointer;
+  margin-right: 20px;
+}
+.hamburger span {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #000;
+}
+.nav-links {
+  display: flex;
+  list-style: none;
+  transition: transform 0.3s ease-in-out;
+}
+.nav-links.hidden {
+  transform: translateX(100%);
+}
 @media screen and (max-width: 768px) {
-  .glossy-container {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .glossy-container ul {
+  .content {
     margin-top: 20px;
   }
-
-  .content {
-    margin-top: 40px;
+  .hamburger {
+    display: flex;
   }
-
-  .block {
-    width: 90%;
-    margin: 0 auto;
+  .nav-links {
+    flex-direction: column;
+    position: absolute;
+    top: 80px;
+    right: 0;
+    background: white;
+    width: 450px;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transform: translateX(100%);
   }
-
-  .box {
-    border-right: none;
-    border-bottom: 2px solid #000000;
+  .nav-links.hidden {
+    transform: translateX(0);
+  }
+  .glossy-container ul {
+    margin-top: 0;
+  }
+  .glossy-container ul li {
+    margin: 0;
     margin-bottom: 10px;
+    text-align: center;
   }
-
-  .row + .row {
-    border-top: none;
+  .box {
+    flex: 1 1 calc(50% - 20px);
+    border: 0px;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .glossy-container ul {
-    flex-direction: column;
-    margin-top: 10px;
-  }
-
-  .glossy-container ul li {
-    margin: 0;
-    margin-bottom: 10px;
-  }
-
-  .content {
-    margin-top: 20px;
+  .box {
+    flex: 1 1 100%;
   }
 }
